# banshee

./: .gitignore  .gitmodules  AUTHORS  Banshee.sln  HACKING  MAINTAINERS  Makefile.am  NEWS  README  banshee.doap  configure.ac  profile-configure
data/: Makefile.am  addin-xml-strings.cs
data/desktop-files/: common.desktop.in
extras/: README.releasing  create-release-notes  make-release
help/: Makefile.am
help/C/: amazon.page  extensions.page  import.page  index.page  introduction.page  keyboard-shortcuts.page  lastfm.page  manage-playlists.page  manage-tags.page  play-queue.page  play.page  podcast.page  radio.page  search.page  sort.page  sync.page  ui.page
help/ca/: ca.po
help/cs/: cs.po
help/el/: el.po
help/es/: es.po
help/zh_CN/: zh_CN.po
libbanshee/: banshee-player-dvd.c  banshee-player-dvd.h  banshee-player-missing-elements.c  banshee-player-pipeline.c  banshee-player-private.h  banshee-player-video.c  banshee-player.c  libbanshee.sln
po/: POTFILES.in  ca.po  cs.po  da.po  el.po  es.po  fr.po  gl.po  hu.po  id.po  ja.po  lt.po  lv.po  nb.po  pl.po  pt.po  pt_BR.po  sl.po  sr.po  sr@latin.po  tr.po
src/Backends/: Makefile.am
src/Backends/Banshee.GStreamer/: Banshee.GStreamer.csproj  Makefile.am
src/Backends/Banshee.GStreamerSharp/: Banshee.GStreamerSharp.csproj  Banshee.GStreamerSharp.dll.config  Makefile.am
src/Backends/Banshee.GStreamerSharp/Banshee.GStreamerSharp/: AudioCdRipper.cs  BpmDetector.cs  CddaManager.cs  DvdManager.cs  GstExtensions.cs  PlayerEngine.cs  Transcoder.cs  VideoManager.cs  Visualization.cs
src/Backends/Banshee.Gio/: Banshee.Gio.csproj  Makefile.am
src/Backends/Banshee.Gnome/: Banshee.Gnome.csproj
src/Backends/Banshee.NowPlaying.X11/: Banshee.NowPlaying.X11.csproj
src/Backends/Banshee.Osx/: Banshee.Osx.csproj
src/Backends/Banshee.Unix/: Banshee.Unix.csproj
src/Backends/Banshee.Windows/: Banshee.Windows.csproj
src/Clients/: Makefile.am
src/Clients/Beroe/: Beroe.csproj
src/Clients/MediaPanel/: Makefile.am  MediaPanel.csproj
src/Clients/Muinshee/: Muinshee.csproj
src/Clients/Nereid/: Nereid.csproj
src/Core/Banshee.CollectionIndexer/: Banshee.CollectionIndexer.csproj
src/Core/Banshee.Core/: Banshee.Core.csproj  Makefile.am
src/Core/Banshee.Services/: Banshee.Services.csproj  Makefile.am
src/Core/Banshee.ThickClient/: Banshee.ThickClient.csproj  Makefile.am
src/Core/Banshee.WebBrowser/: Banshee.WebBrowser.csproj
src/Core/Banshee.Widgets/: Banshee.Widgets.csproj  Makefile.am
src/Core/Banshee.Widgets/Banshee.Widgets/: CustomActionProxy.cs  DateButton.cs  DiscUsageDisplay.cs  HoverImageButton.cs  LinearProgress.cs  LinkLabel.cs  MessagePane.cs  SearchEntry.cs  SeekSlider.cs  StreamPositionLabel.cs  Tile.cs  TileView.cs  VolumeButton.cs
src/Dap/Banshee.Dap/: Banshee.Dap.csproj
src/Dap/Banshee.Dap.AppleDevice/: Banshee.Dap.AppleDevice.csproj
src/Dap/Banshee.Dap.Karma/: Banshee.Dap.Karma.csproj
src/Dap/Banshee.Dap.MassStorage/: Banshee.Dap.MassStorage.addin.xml  Banshee.Dap.MassStorage.csproj
src/Dap/Banshee.Dap.Mtp/: Banshee.Dap.Mtp.csproj
src/Extensions/: Makefile.am
src/Extensions/Banshee.AmazonMp3/: Banshee.AmazonMp3.csproj
src/Extensions/Banshee.AmazonMp3.Store/: Banshee.AmazonMp3.Store.csproj
src/Extensions/Banshee.Audiobook/: Banshee.Audiobook.csproj
src/Extensions/Banshee.Bpm/: Banshee.Bpm.csproj
src/Extensions/Banshee.CoverArt/: Banshee.CoverArt.csproj
src/Extensions/Banshee.Daap/: Banshee.Daap.csproj
src/Extensions/Banshee.Discs/: Banshee.Discs.addin.xml  Banshee.Discs.csproj  Makefile.am
src/Extensions/Banshee.Discs/Banshee.Discs/: AbstractDiscService.cs  AbstractDiscSource.cs  DiscModel.cs  DiscService.cs  DiscSource.cs  DiscTrackInfo.cs
src/Extensions/Banshee.Discs/Banshee.Discs.AudioCd/: AudioCdDiscModel.cs  AudioCdDuplicator.cs  AudioCdRipper.cs  AudioCdService.cs  AudioCdSource.cs  AudioCdTrackInfo.cs
src/Extensions/Banshee.Discs/Banshee.Discs.Dvd/: DvdModel.cs  DvdService.cs  DvdSource.cs  DvdTrackInfo.cs
src/Extensions/Banshee.Discs/Resources/: GlobalUI.xml  GlobalUIDvd.xml
src/Extensions/Banshee.Lastfm.Fingerprint/: Banshee.Lastfm.Fingerprint.addin.xml  Makefile.am  TODO
src/Extensions/Banshee.Lastfm.Fingerprint/Banshee.Lastfm.Fingerprint/: Banshee.Lastfm.Fingerprint.csproj  FingerprintJob.cs  Makefile.am
src/Extensions/Banshee.Lastfm.Fingerprint/Banshee.Lastfm.Fingerprint/Banshee.Lastfm.Fingerprint/: AudioDecoder.cs  LastfmFingerprintService.cs
src/Extensions/Banshee.Lastfm.Fingerprint/liblastfmfpBridge/: Makefile.am  gst-lastfmfpbridge.cpp  gst-lastfmfpbridge.h  lastfmfpbridgetest.cpp  liblastfmfpBridge.cproj  liblastfmfpBridge.sln
src/Extensions/Banshee.MediaPanel/: Banshee.MediaPanel.addin.xml  Banshee.MediaPanel.csproj  Makefile.am  banshee-media-panel.desktop.in
src/Extensions/Banshee.MediaPanel/Banshee.MediaPanel/: HeaderBox.cs  MediaPanel.cs  MediaPanelContents.cs  MediaPanelService.cs  MediaPanelTheme.cs  PlaybackBox.cs  SearchEntry.cs  TrackInfoDisplay.cs
src/Extensions/Banshee.NotificationArea/: Banshee.NotificationArea.csproj  Makefile.am
src/Extensions/Banshee.NotificationArea/Banshee.NotificationArea/: GtkNotificationAreaBox.cs  NotificationAreaService.cs  TrackInfoPopup.cs  X11NotificationAreaBox.cs
src/Extensions/Banshee.NotificationArea/Notifications/: Notification.cs
src/Extensions/Banshee.SoundMenu/: Banshee.SoundMenu.csproj  Makefile.am
src/Extensions/Banshee.SoundMenu/Banshee.SoundMenu/: SoundMenuProxy.cs
src/Extensions/Banshee.Video/: Banshee.Video.addin.xml  Banshee.Video.csproj  Makefile.am
src/Extensions/Banshee.Video/Banshee.Video/: CastingMember.cs  ContextPage.cs  MovieGroupSource.cs  TvShowGroupSource.cs  VideoDetailPanel.cs  VideoInfo.cs  VideoInfoModel.cs  VideoInfoView.cs  VideoLibrarySource.cs  VideoService.cs  VideoSourceContents.cs
src/Extensions/Banshee.Video/Banshee.Video.Metadata/: ImdbMetadataJob.cs  ImdbMetadataProvider.cs  TmdbMetadataJob.cs  TmdbMetadataProvider.cs  TvdbMetadataJob.cs  TvdbMetadataProvider.cs  VideoMetadataService.cs
tests/: Makefile.am
(+247 files in other folders)
