ASSEMBLY = Banshee.AudioCd
TARGET = library
LINK = $(REF_EXTENSION_AUDIOCD)
INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)

SOURCES =  \
	Banshee.Discs.AudioCd/AudioCdDiscModel.cs \
	Banshee.Discs.AudioCd/AudioCdDuplicator.cs \
	Banshee.Discs.AudioCd/AudioCdRipper.cs \
	Banshee.Discs.AudioCd/AudioCdService.cs \
	Banshee.Discs.AudioCd/AudioCdSource.cs \
	Banshee.Discs.AudioCd/AudioCdTrackInfo.cs \
	Banshee.Discs/AbstractDiscService.cs \
	Banshee.Discs/AbstractDiscSource.cs

RESOURCES =  \
	Resources/ActiveSourceUI.xml \
	Resources/GlobalUI.xml

include $(top_srcdir)/build/build.mk

