ASSEMBLY = Banshee.Discs
TARGET = library
LINK = $(REF_EXTENSION_DISCS)
INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)

SOURCES =  \
	Banshee.Discs.AudioCd/AudioCdDiscModel.cs \
	Banshee.Discs.AudioCd/AudioCdDuplicator.cs \
	Banshee.Discs.AudioCd/AudioCdRipper.cs \
	Banshee.Discs.AudioCd/AudioCdService.cs \
	Banshee.Discs.AudioCd/AudioCdSource.cs \
	Banshee.Discs.AudioCd/AudioCdTrackInfo.cs \
	Banshee.Discs.Dvd/DvdModel.cs \
	Banshee.Discs.Dvd/DvdService.cs \
	Banshee.Discs.Dvd/DvdSource.cs \
	Banshee.Discs.Dvd/DvdTrackInfo.cs \
	Banshee.Discs/DiscModel.cs \
	Banshee.Discs/DiscService.cs \
	Banshee.Discs/DiscSource.cs \
	Banshee.Discs/DiscTrackInfo.cs

RESOURCES =  \
	Banshee.Discs.addin.xml \
	Resources/ActiveSourceUI.xml \
	Resources/GlobalUI.xml

include $(top_srcdir)/build/build.mk

