ASSEMBLY = Banshee.Video
TARGET = library
LINK = $(LINK_BANSHEE_THICKCLIENT_DEPS)
INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)

SOURCES =  \
	Banshee.Video/MovieGroupSource.cs \
	Banshee.Video/TvShowGroupSource.cs \
	Banshee.Video/VideoLibrarySource.cs \
	Banshee.Video/VideoService.cs
	
RESOURCES = Banshee.Video.addin.xml

include $(top_srcdir)/build/build.mk
